--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- SEO -->
-  <meta name="description" content="">
-  <meta name="keywords" content="">
+  <meta name="description" content="Uzbekcha filmlar sayti, Siz izlagan barcha filmlar bizning saytimizda mavjud! - SizIzlaganFilmlar.uz">
+  <meta name="keywords" content="filmlar, kinolar, Movie, sujet, ujas, komediya, detiktiv, dramma   ">
 
   <!-- REMIX ICON LINK -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css" integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <!-- FAVICON -->
+  <link rel="shortcut icon" href="./assets/img/sif2.png" type="image/x-icon">
 
   <!-- CSS LINK -->
   <link rel="stylesheet" href="./style/style.css">
@@ -20,7 +23,31 @@
 <body>
 
   <header class="header">
-
+    <div class="container">
+      <a href="#">
+        <img class="logo-img" src="./assets/img/sif2.png" alt="">
+      </a>
+      <div class="list">
+        <ul>
+          <li>
+            <a href="">mamlakat</a>
+          </li>
+          <li>
+            <a href="">janr</a>
+          </li>
+          <li>
+            <a href="">yil</a>
+          </li>
+          <li>
+            <a href="">top filmlar</a>
+          </li>
+        </ul>
+        <div class="search-box">
+          <i class="ri-search-line"></i>
+          <input type="text" class="search" id="search" autocomplete="off" placeholder="film nomini kiriting...">
+        </div>
+      </div>
+    </div>
   </header>
 
   <section class="hero-section">
