--- a/index.html
+++ b/index.html
@@ -29,8 +29,25 @@
       </a>
       <div class="list">
         <ul>
-          <li>
+          <li class="country">
             <a href="">mamlakat</a>
+            <ul class="country-list">
+              <li>
+                <button>AQSH</button>
+              </li>
+              <li>
+                <button>ROSSIYA</button>
+              </li>
+              <li>
+                <button>HINDISTON</button>
+              </li>
+              <li>
+                <button>KOREYA</button>
+              </li>
+              <li>
+                <button>XITOY</button>
+              </li>
+            </ul>
           </li>
           <li>
             <a href="">janr</a>
