--- a/index.html
+++ b/index.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- SEO -->
-  <meta name="description" content="Uzbekcha filmlar sayti, Siz izlagan barcha filmlar bizning saytimizda mavjud! - SizIzlaganFilmlar.uz">
+  <meta name="description"
+    content="Uzbekcha filmlar sayti, Siz izlagan barcha filmlar bizning saytimizda mavjud! - SizIzlaganFilmlar.uz">
   <meta name="keywords" content="filmlar, kinolar, Movie, sujet, ujas, komediya, detiktiv, dramma   ">
 
   <!-- REMIX ICON LINK -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css" integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.css"
+    integrity="sha512-kJlvECunwXftkPwyvHbclArO8wszgBGisiLeuDFwNM8ws+wKIw0sv1os3ClWZOcrEB2eRXULYUsm8OVRGJKwGA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- FAVICON -->
   <link rel="shortcut icon" href="./assets/img/sif2.png" type="image/x-icon">
 
   <!-- CSS LINK -->
   <link rel="stylesheet" href="./style/style.css">
+  <link rel="stylesheet" href="./style/header.css">
+  <link rel="stylesheet" href="./style/main.css">
 
   <!-- TITLE -->
   <title>Movie - web site</title>
 </head>
+
 <body>
 
   <header class="header">
@@ -30,10 +37,10 @@
       <div class="list">
         <ul>
           <li class="country">
-            <a href="">mamlakat</a>
+            <a href="#">mamlakat</a>
             <ul class="country-list">
               <li>
-                <button>AQSH</button>
+                <button class="usa-btn">AQSH</button>
               </li>
               <li>
                 <button>ROSSIYA</button>
@@ -49,14 +56,48 @@
               </li>
             </ul>
           </li>
-          <li>
-            <a href="">janr</a>
+          <li class="genre">
+            <a href="#">janr</a>
+            <ul class="genre-list">
+              <li>
+                <button>UJAS</button>
+              </li>
+              <li>
+                <button>DRAMA</button>
+              </li>
+              <li>
+                <button class="fantastic-btn">FANTASTIK</button>
+              </li>
+              <li>
+                <button>KOMEDIYA</button>
+              </li>
+              <li>
+                <button>JANGARI</button>
+              </li>
+            </ul>
+          </li>
+          <li class="year">
+            <a href="#">yil</a>
+            <ul class="year-list">
+              <li>
+                <button class="year-2025">2025</button>
+              </li>
+              <li>
+                <button>2024</button>
+              </li>
+              <li>
+                <button>2023</button>
+              </li>
+              <li>
+                <button>2022</button>
+              </li>
+              <li>
+                <button>2021</button>
+              </li>
+            </ul>
           </li>
           <li>
-            <a href="">yil</a>
-          </li>
-          <li>
-            <a href="">top filmlar</a>
+            <a href="#">top filmlar</a>
           </li>
         </ul>
         <div class="search-box">
@@ -67,11 +108,135 @@
     </div>
   </header>
 
-  <section class="hero-section">
-
-  </section>
+  <main class="main">
+    <section class="hero-section">
+      <div class="container">
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+        <div class="card">
+          <div class="card-img"></div>
+          <h4>Film nomi</h4>
+        </div>
+      </div>
+    </section>
+  </main>
 
   <!-- JAVASCRIPT LINK -->
   <script src="./js/script.js"></script>
 </body>
+
 </html>
