--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
   <main class="main">
     <section class="hero-section">
-      <div class="container">
+      <div class="cont">
       </div>
     </section>
   </main>
