--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <header class="header">
     <div class="container">
-      <a href="#">
+      <a href="">
         <img class="logo-img" src="./assets/img/sif2.png" alt="">
       </a>
       <div class="list">
@@ -97,7 +97,7 @@
             </ul>
           </li>
           <li>
-            <a href="#">top filmlar</a>
+            <a href="#" class="top">top filmlar</a>
           </li>
         </ul>
         <div class="search-box">
