--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" href="./style/main.css">
 
   <!-- TITLE -->
-  <title>Movie - web site</title>
+  <title>Siz Izlagan Filmlar - Online kinolar dunyosi</title>
 </head>
 
 <body>
@@ -104,6 +104,13 @@
           <i class="ri-search-line"></i>
           <input type="text" class="search" id="search" autocomplete="off" placeholder="film nomini kiriting...">
         </div>
+        <div class="account">
+          <a href="./src/login-signin.html">
+            <button type="button" class="login-btn">
+              <i class="ri-login-circle-line loginIcn"></i>
+            </button>
+          </a>
+        </div>
       </div>
     </div>
   </header>
@@ -113,6 +120,7 @@
       <div class="cont">
       </div>
     </section>
+
   </main>
 
   <!-- JAVASCRIPT LINK -->
